# f1car

./: .gitignore  README.md  test.py  test_180_1.py
180demo/: kin_data4w_180.csv  kin_data4w_180_20211219-110021.csv  test_180.py  test_180_2.py
data/: cmd_180.csv  kin_data4w.csv  kin_data4w_180.csv  kin_data5194w.csv  kin_data5464w.csv  velo_sensvelo_sens4.1.csv
data/velo_sens/: velo_sens4.199999999999999.csv  velo_sens4.299999999999999.csv  velo_sens4.399999999999999.csv  velo_sens4.499999999999998.csv  velo_sens4.599999999999998.csv  velo_sens4.6999999999999975.csv  velo_sens4.799999999999997.csv  velo_sens4.899999999999997.csv  velo_sens4.9999999999999964.csv  velo_sens5.099999999999996.csv  velo_sens5.199999999999996.csv  velo_sens5.299999999999995.csv  velo_sens5.399999999999995.csv  velo_sens5.499999999999995.csv  velo_sens5.599999999999994.csv  velo_sens5.699999999999994.csv  velo_sens5.799999999999994.csv  velo_sens5.899999999999993.csv  velo_sens5.999999999999993.csv  velo_sens6.0999999999999925.csv
data/velo_sens1/: velo_sens4.1.csv  velo_sens4.199999999999999.csv  velo_sens4.299999999999999.csv  velo_sens4.399999999999999.csv  velo_sens4.499999999999998.csv  velo_sens4.599999999999998.csv  velo_sens4.6999999999999975.csv  velo_sens4.799999999999997.csv  velo_sens4.899999999999997.csv  velo_sens4.9999999999999964.csv  velo_sens5.099999999999996.csv  velo_sens5.199999999999996.csv  velo_sens5.299999999999995.csv  velo_sens5.399999999999995.csv  velo_sens5.499999999999995.csv  velo_sens5.599999999999994.csv  (+5 more)
simulator/: cmd.txt
simulator/src/acl_msgs/: CMakeLists.txt  package.xml
simulator/src/acl_msgs/action/: BroadcastTrajectory.action
simulator/src/acl_msgs/msg/: CarCmd.msg  CarGoal.msg  CarState.msg  ClassifierFeature.msg  ClassifierProbabilities.msg  Cvx.msg  GPparams.msg  HexCantedAttCmd.msg  HexData.msg  ImageRect.msg  Latency.msg  LocalizerTrigger.msg  MissionMode.msg  PendData.msg  PolyInputs.msg  QuadAHRS.msg  QuadCntrl.msg  QuadGoal.msg  QuadHealth.msg  QuadMode.msg  QuadPath.msg  QuadPathArray.msg  QuadRawSensors.msg  QuadState.msg  QuadWaypoint.msg  QuadWaypointQueueComplete.msg  SimpleState.msg  TermGoal.msg  Waypoint.msg
simulator/src/acl_msgs/srv/: GenPath.srv  GenSimplePath.srv  MultiVehPreCompute.srv  MultiVehTakeoffLand.srv  MultiVehWaypoint.srv  OLcmd.srv  PilcoRollout.srv  ResetCar.srv  ReturnToBase.srv  RunStep.srv  SingleSegment.srv  SingleTrack.srv
simulator/src/car_sim/: CMakeLists.txt  package.xml
simulator/src/car_sim/include/: CarDynamics.hpp  CarDynamics.hpp.old  CarSim.hpp
simulator/src/car_sim/src/: CarDynamics.cpp  CarSim.cpp  cmd_180.py  cmd_trans.py  main.cpp  test_180.py  test_acc_brake.py  test_circle.py  test_cmd.py  test_cmd519.py  test_cmd546.py  test_cmd_t.py  test_drift.py  velo_sensitive.py
simulator/src/car_sim/src/4w/: CarDynamics.cpp.old
test/: ddpg.py  expert_env1.npz  generate_exp_env1.py.py  gym_env.py  ppo2_cart.py  ppo2_env1.py  ppo2_env2.py  ppo2_exp_env1.py  sac.py  test_car.py  test_car_1.py  test_generate_expert.py  test_ppo.py
well_trained/: env_actions1.csv  expert_ps2.npz  gym_env_2ps2.py  gym_env_2ps2p.py  gym_env_3.py  gym_env_4.py  mycar_control.py  mysensor.py  policy_actions1.csv  ppo2_gen_exp.py  ppo2_run_exp.py  ppo2_test.py  ppo2_train.py  self_ppo2_env2.py  self_ppo2_env2_test.py  self_ppo2_env2_test_csv.py
(+511 files in other folders)
